--- a/vercel-deploy/vercel.json
+++ b/vercel-deploy/vercel.json
@@ -19,5 +19,10 @@
       "src": "/(.*)",
       "dest": "/public/$1"
     }
-  ]
+  ],
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.9"
+    }
+  }
 }
