--- a/vercel-deploy/vercel.json
+++ b/vercel-deploy/vercel.json
@@ -1,9 +1,7 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/*.py",
-      "use": "@vercel/python"
+  "functions": {
+    "api/*.py": {
+      "runtime": "@vercel/python@3.9.16"
     }
-  ]
+  }
 }
